; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_module.c_module_is_already_loaded.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/dbghelp/extr_module.c_module_is_already_loaded.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.module = type { %struct.TYPE_2__, %struct.module* }
%struct.TYPE_2__ = type { i32* }
%struct.process = type { %struct.module* }

@ERROR_INVALID_NAME = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.module* @module_is_already_loaded(%struct.process* %0, i32* %1) #0 {
  %3 = alloca %struct.module*, align 8
  %4 = alloca %struct.process*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca %struct.module*, align 8
  %7 = alloca i32*, align 8
  store %struct.process* %0, %struct.process** %4, align 8
  store i32* %1, i32** %5, align 8
  %8 = load %struct.process*, %struct.process** %4, align 8
  %9 = getelementptr inbounds %struct.process, %struct.process* %8, i32 0, i32 0
  %10 = load %struct.module*, %struct.module** %9, align 8
  store %struct.module* %10, %struct.module** %6, align 8
  br label %11

11:                                               ; preds = %25, %2
  %12 = load %struct.module*, %struct.module** %6, align 8
  %13 = icmp ne %struct.module* %12, null
  br i1 %13, label %14, label %29

14:                                               ; preds = %11
  %15 = load i32*, i32** %5, align 8
  %16 = load %struct.module*, %struct.module** %6, align 8
  %17 = getelementptr inbounds %struct.module, %struct.module* %16, i32 0, i32 0
  %18 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %17, i32 0, i32 0
  %19 = load i32*, i32** %18, align 8
  %20 = call i32 @strcmpiW(i32* %15, i32* %19)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %24, label %22

22:                                               ; preds = %14
  %23 = load %struct.module*, %struct.module** %6, align 8
  store %struct.module* %23, %struct.module** %3, align 8
  br label %57

24:                                               ; preds = %14
  br label %25

25:                                               ; preds = %24
  %26 = load %struct.module*, %struct.module** %6, align 8
  %27 = getelementptr inbounds %struct.module, %struct.module* %26, i32 0, i32 1
  %28 = load %struct.module*, %struct.module** %27, align 8
  store %struct.module* %28, %struct.module** %6, align 8
  br label %11

29:                                               ; preds = %11
  %30 = load i32*, i32** %5, align 8
  %31 = call i32* @get_filename(i32* %30, i32* null)
  store i32* %31, i32** %7, align 8
  %32 = load %struct.process*, %struct.process** %4, align 8
  %33 = getelementptr inbounds %struct.process, %struct.process* %32, i32 0, i32 0
  %34 = load %struct.module*, %struct.module** %33, align 8
  store %struct.module* %34, %struct.module** %6, align 8
  br label %35

35:                                               ; preds = %50, %29
  %36 = load %struct.module*, %struct.module** %6, align 8
  %37 = icmp ne %struct.module* %36, null
  br i1 %37, label %38, label %54

38:                                               ; preds = %35
  %39 = load i32*, i32** %7, align 8
  %40 = load %struct.module*, %struct.module** %6, align 8
  %41 = getelementptr inbounds %struct.module, %struct.module* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %41, i32 0, i32 0
  %43 = load i32*, i32** %42, align 8
  %44 = call i32* @get_filename(i32* %43, i32* null)
  %45 = call i32 @strcmpiW(i32* %39, i32* %44)
  %46 = icmp ne i32 %45, 0
  br i1 %46, label %49, label %47

47:                                               ; preds = %38
  %48 = load %struct.module*, %struct.module** %6, align 8
  store %struct.module* %48, %struct.module** %3, align 8
  br label %57

49:                                               ; preds = %38
  br label %50

50:                                               ; preds = %49
  %51 = load %struct.module*, %struct.module** %6, align 8
  %52 = getelementptr inbounds %struct.module, %struct.module* %51, i32 0, i32 1
  %53 = load %struct.module*, %struct.module** %52, align 8
  store %struct.module* %53, %struct.module** %6, align 8
  br label %35

54:                                               ; preds = %35
  %55 = load i32, i32* @ERROR_INVALID_NAME, align 4
  %56 = call i32 @SetLastError(i32 %55)
  store %struct.module* null, %struct.module** %3, align 8
  br label %57

57:                                               ; preds = %54, %47, %22
  %58 = load %struct.module*, %struct.module** %3, align 8
  ret %struct.module* %58
}

declare dso_local i32 @strcmpiW(i32*, i32*) #1

declare dso_local i32* @get_filename(i32*, i32*) #1

declare dso_local i32 @SetLastError(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
